--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -1,3 +1,108 @@
+@use "sass:math";
+
+// Connecting mixins ===========================================================================================================================================================================================================================================================================
+@import "utils/mixins";
+
 h1 {
-  font-size: 12px;
+  color: red;
+}
+
+// Connecting fonts ===========================================================================================================================================================================================================================================================================
+@import url("https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic&display=swap");
+
+// ============================================================================================================================================================================================================================================================================================================================================================================================
+// Settings ============================================================================================================================================================================================================================================================================================================================================================================================
+// ============================================================================================================================================================================================================================================================================================================================================================================================
+
+// Fonts ==============================================================================================================================================================================================================================================================================
+$fontFamily: "Lato";
+$fontSize: rem(16);
+
+// Main colors
+$mainColor: #424551;
+$mainDarkColor: #1E212C;
+$gradientColor: linear-gradient(55.95deg, #FF3F3A 0%, #F75E05 100%);
+$redColor: #FF3F3A;
+
+// adaptive settings ===============================================================================================================================================================================================================================================================================================
+
+$minWidth: 320;
+$maxWidth: 1920;
+$maxWidthContainer: 1230;
+$containerPadding: 30;
+$containerWidth: $maxWidthContainer + $containerPadding;
+$responsiveType: 1;
+
+// Break-points
+$pc: em($containerWidth);
+$tablet: em(991.98);
+$mobile: em(767.98);
+$mobileSmall: em(479.98);
+
+
+// ============================================================================================================================================================================================================================================================================================================================================================================================
+// ============================================================================================================================================================================================================================================================================================================================================================================================
+
+// Null ============================================================================================================================================================================================== =============================================================================================== ===============================================================================================
+@import "utils/null";
+
+// style tag BODY ============================================================================================================================================================================================================================================================================================================================================================================================
+body {
+  color: $mainColor;
+  overflow: auto;
+  &._lock  {
+    overflow: hidden;
+  }
+}
+
+// wrapper ============================================================================================================================================================================================================================================================================================================================================================================================================================================
+.wrapper {
+  min-height: 100%;
+  overflow: hidden;
+  // Прижимаем footer
+  > main {
+    flex: 1 1 auto;
+  }
+  // Фикс для слайдеров
+  > * {
+    min-width: 0;
+  }
+}
+// Container ======================================================================================================================================================================================================================
+
+@if ($responsiveType==1) {
+  [class*="__container"] {
+    @if ($maxWidthContainer>0) {
+      max-width: rem($maxWidthContainer);
+      box-sizing: content-box;
+      margin: 0 auto;
+    }
+    @if ($containerPadding>0) {
+      padding: 0 rem(math.div($containerPadding, 2));
+    }
+  }
+} @else {
+  [class*="__container"] {
+    margin: 0 auto;
+    @if ($maxWidthContainer>0) {
+      max-width: rem($maxWidthContainer);
+      box-sizing: content-box;
+    } @else {
+      @if ($containerPadding>0) {
+        padding: 0 rem(math.div($containerPadding, 2));
+      }
+    }
+    @media (max-width: $pc) {
+      max-width: rem(970);
+    }
+    @media (max-width: $tablet) {
+      max-width: rem(750);
+    }
+    @media (max-width: $mobile) {
+      max-width: none;
+      @if ($containerPadding>0 and $maxWidthContainer>0) {
+        padding: 0 rem(math.div($containerPadding, 2));
+      }
+    }
+  }
 }
