added markup on home-page.Added fetch functional for articles.

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -3,10 +3,6 @@
 // Connecting mixins ===========================================================================================================================================================================================================================================================================
 @import "utils/mixins";
 
-h1 {
-  color: red;
-}
-
 // Connecting fonts ===========================================================================================================================================================================================================================================================================
 @import url("https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic&display=swap");
 
@@ -20,11 +16,12 @@ $fontSize: rem(16);
 
 // Main colors
 $mainColor: #424551;
+$header-border-color: #2a2929;
 $mainDarkColor: #1E212C;
 $gradientColor: linear-gradient(55.95deg, #FF3F3A 0%, #F75E05 100%);
 $redColor: #FF3F3A;
 
-// adaptive settings ===============================================================================================================================================================================================================================================================================================
+// Adaptive Settings ===============================================================================================================================================================================================================================================================================================
 
 $minWidth: 320;
 $maxWidth: 1920;
@@ -106,3 +103,10 @@ body {
     }
   }
 }
+
+@import "layout/header.sass.scss";
+@import "pages/home-page.sass.scss";
+@import "shared/shared.sass.scss";
+
+@import "components/article-card.sass.scss";
+@import "components/article-card-skeleton.sass.scss";
