--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -1,7 +1,7 @@
 @use "sass:math";
 
-// Connecting mixins ===========================================================================================================================================================================================================================================================================
-@import "utils/mixins";
+// Connecting utils ===========================================================================================================================================================================================================================================================================
+@import "utils/utils";
 
 // Connecting fonts ===========================================================================================================================================================================================================================================================================
 @import url("https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic&display=swap");
@@ -13,13 +13,6 @@
 // Fonts ==============================================================================================================================================================================================================================================================================
 $fontFamily: "Lato";
 $fontSize: rem(16);
-
-// Main colors
-$mainColor: #424551;
-$header-border-color: #2a2929;
-$mainDarkColor: #1E212C;
-$gradientColor: linear-gradient(55.95deg, #FF3F3A 0%, #F75E05 100%);
-$redColor: #FF3F3A;
 
 // Adaptive Settings ===============================================================================================================================================================================================================================================================================================
 
@@ -104,9 +97,12 @@ body {
   }
 }
 
+//Imports layout styles
 @import "layout/header.sass.scss";
-@import "pages/home-page.sass.scss";
-@import "shared/shared.sass.scss";
 
-@import "components/article-card.sass.scss";
-@import "components/article-card-skeleton.sass.scss";
+//Imports pages styles
+@import "pages/home-page.sass.scss";
+@import "pages/article-page.sass.scss";
+
+//Imports shared styles
+@import "shared/shared.sass.scss";
