--- a/app/assets/stylesheets/pages/article-page.sass.scss
+++ b/app/assets/stylesheets/pages/article-page.sass.scss
@@ -1,1 +1,52 @@
+@import "../utils/utils";
 
+.article-card {
+  &__info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    @media (max-width:$mobile) {
+      flex-direction: column;
+      align-items: flex-start;
+      margin-bottom: rem(20);
+    }
+  }
+  &__date {
+    font-weight: 600;
+    @media (min-width:$mobile) {
+      flex: 0 0 rem(150);
+    }
+  }
+  &__image {
+    display: flex;
+    justify-content: center;
+    &:not(:last-child) {
+      margin-bottom: rem(35);
+    }
+    > img {
+      width: rem(800);
+      height: rem(480);
+      @media (max-width:$mobile) {
+        max-width: 100%;
+        height: auto;
+        object-fit: cover;
+      }
+    }
+  }
+  &__description {
+    font-size: rem(20);
+    line-height: 120%;
+    &:not(:last-child) {
+        margin-bottom: rem(40);
+     }
+  }
+}
+
+
+.comments-form {
+  padding: rem(15) 0;
+  display: flex;
+  flex-direction: column;
+  gap: rem(20);
+  max-width: rem(580);
+}
