--- a/app/assets/stylesheets/utils/colors.scss
+++ b/app/assets/stylesheets/utils/colors.scss
@@ -3,3 +3,4 @@ $header-border-color: #2a2929;
 $hover-link-color: #B00100;
 $hover-pagination-color: #a40a00;
 $disabled-pagination-color: #888888;
+$shadow: #1C1E2214;
