--- a/app/assets/stylesheets/utils/colors.scss
+++ b/app/assets/stylesheets/utils/colors.scss
@@ -4,3 +4,4 @@ $hover-link-color: #B00100;
 $hover-pagination-color: #a40a00;
 $disabled-pagination-color: #888888;
 $shadow: #1C1E2214;
+$error-color: red;
