--- a/app/assets/stylesheets/pages/article-page.sass.scss
+++ b/app/assets/stylesheets/pages/article-page.sass.scss
@@ -50,3 +50,17 @@
   gap: rem(20);
   max-width: rem(580);
 }
+
+.comments-posts {
+  padding-top: rem(35);
+  &__item {
+    border-bottom: rem(1) solid $mainColor;
+    padding: rem(14) 0;
+  }
+  &__name {
+    font-weight: 600;
+    &:not(:last-child) {
+        margin-bottom: rem(10);
+     }
+  }
+}
