--- a/app/assets/stylesheets/pages/article-page.sass.scss
+++ b/app/assets/stylesheets/pages/article-page.sass.scss
@@ -47,8 +47,10 @@
   padding: rem(15) 0;
   display: flex;
   flex-direction: column;
-  gap: rem(20);
   max-width: rem(580);
+  input, textarea {
+    width: 100%;
+  }
 }
 
 .comments-posts {
