--- a/app/assets/stylesheets/shared/shared.sass.scss
+++ b/app/assets/stylesheets/shared/shared.sass.scss
@@ -90,6 +90,12 @@
         color: red;
       }
     }
+    > textarea {
+      border-color: red;
+      &::placeholder {
+        color: red;
+      }
+    }
   }
 }
 
