--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,6 +8,6 @@ html
     = csp_meta_tag
     //= stylesheet_link_tag "js/application", "data-turbo-track": "reload"
     = stylesheet_link_tag "css/application", "data-turbo-track": "reload"
-    = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
+    = javascript_include_tag "js/application", "data-turbo-track": "reload", defer: true
   body
     = yield
