fix authorization devise and form

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -103,6 +103,7 @@ body {
 //Imports pages styles
 @import "pages/home-page.sass.scss";
 @import "pages/article-page.sass.scss";
+@import "pages/login-page.sass.scss";
 
 //Imports shared styles
 @import "shared/shared.sass.scss";
