--- a/app/assets/stylesheets/utils/colors.sass.scss
+++ b/app/assets/stylesheets/utils/colors.sass.scss
@@ -5,3 +5,6 @@ $hover-pagination-color: #a40a00;
 $disabled-pagination-color: #888888;
 $shadow: #1C1E2214;
 $error-color: red;
+$edit-button-color: #ff5900;
+$edit-hover-button-color: #c44907;
+$delete-button-color: #e82e0c;
