--- a/app/assets/stylesheets/components/articles.sass.scss
+++ b/app/assets/stylesheets/components/articles.sass.scss
@@ -1,6 +1,8 @@
 @import "../utils/utils";
 
 .article-home-page {
+  display: flex;
+  flex-direction: column;
   box-shadow: 0 rem(8) rem(16) 0 $shadow;
   border-radius: rem(8);
   background: #ffff;
@@ -18,6 +20,7 @@
   }
   &__content {
     padding: rem(16);
+    flex: 1 1 auto;
   }
   &__title {
     padding-top: rem(12);
@@ -31,5 +34,10 @@
     &:hover {
       box-shadow: rem(10) rem(30) rem(30) 0 $shadow;
     }
+  }
+  &__admin {
+    display: flex;
+    gap: rem(8);
+    padding: rem(8);
   }
 }
