added button link and added functional for add and put article

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -104,6 +104,7 @@ body {
 @import "pages/home-page.sass.scss";
 @import "pages/article-page.sass.scss";
 @import "pages/login-page.sass.scss";
+@import "pages/admin-panel-page.sass.scss";
 @import "pages/article-admin-page.sass.scss";
 
 //Imports shared styles
