--- a/app/assets/stylesheets/utils/colors.sass.scss
+++ b/app/assets/stylesheets/utils/colors.sass.scss
@@ -8,3 +8,5 @@ $error-color: red;
 $edit-button-color: #ff5900;
 $edit-hover-button-color: #c44907;
 $delete-button-color: #e82e0c;
+$add-button-color: #397540;
+$add-hover-button-color: #153f19;
