--- a/app/assets/stylesheets/pages/admin-panel-page.sass.scss
+++ b/app/assets/stylesheets/pages/admin-panel-page.sass.scss
@@ -1,1 +1,14 @@
-.admin-panel-page
+@import "../utils/utils";
+.admin-panel-page {
+  &__add {
+    color: $add-button-color;
+    font-size: rem(20);
+    font-weight: 700;
+    transition: color .3s linear;
+    @media (any-hover: hover){
+        &:hover {
+            color: $add-hover-button-color;
+        }
+    }
+  }
+}
