added styles for article form page

--- a/app/assets/stylesheets/pages/article-admin-page.sass.scss
+++ b/app/assets/stylesheets/pages/article-admin-page.sass.scss
@@ -1,5 +1,39 @@
+@import "../utils/utils";
+
 .article-admin-page {
   &__form {
     display: flex;
+    justify-content: space-between;
+  }
+  &__container {
+    max-width: rem(900);
+  }
+  &__image, &__block {
+    width: 48%;
+    input, textarea {
+      width: 100%;
+    }
+  }
+  &__uploader {
+    border: rem(1) dashed #2E2F30;
+    border-radius: rem(8);
+    height: rem(220);
+    margin-bottom: rem(15);
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    &-icon {
+      width: rem(55);
+      margin: auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+    }
+  }
+  &__hidden-uploader {
+    display: none;
   }
 }
