--- a/app/assets/stylesheets/pages/article-admin-page.sass.scss
+++ b/app/assets/stylesheets/pages/article-admin-page.sass.scss
@@ -48,6 +48,7 @@
     height: rem(265);
     margin-bottom: rem(15);
     img {
+      border-radius: rem(8);
       width: 100%;
       height: 100%;
       object-fit: cover;
