added update articles and some fixed prettier

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -109,3 +109,5 @@ body {
 
 //Imports shared styles
 @import "shared/shared.sass.scss";
+@import "components/articles.sass.scss";
+@import "components/articles-skeleton.sass.scss";
