--- a/app/assets/stylesheets/shared/shared.sass.scss
+++ b/app/assets/stylesheets/shared/shared.sass.scss
@@ -149,3 +149,12 @@
     }
   }
 }
+
+.articles-body {
+  padding-top: rem(25);
+  display: grid;
+  gap: rem(20);
+  @media (min-width: $mobileSmall) {
+    @include gridCards(fit, rem(320), 1fr, rem(20));
+  }
+}
