--- a/app/assets/stylesheets/utils/colors.sass.scss
+++ b/app/assets/stylesheets/utils/colors.sass.scss
@@ -1,6 +1,7 @@
 $mainColor: #424551;
 $header-border-color: #2a2929;
 $hover-link-color: #B00100;
+$color-white: #ffffff;
 $hover-pagination-color: #a40a00;
 $disabled-pagination-color: #888888;
 $shadow: #1C1E2214;
