--- a/app/assets/stylesheets/shared/shared.sass.scss
+++ b/app/assets/stylesheets/shared/shared.sass.scss
@@ -23,7 +23,7 @@
     width: rem(25);
     height: rem(25);
     background: $mainColor;
-    color: #ffffff;
+    color: $color-white;
     font-size: rem(12);
     font-weight: 500;
     transition: background .3s linear;
@@ -80,20 +80,20 @@
   }
   &__error {
     padding-top: rem(7);
-    color: red;
+    color: $error-color;
     height: rem(35);
   }
   &.error {
     > input {
-      border-color: red;
+      border-color: $error-color;
       &::placeholder {
-        color: red;
+        color: $error-color;
       }
     }
     > textarea {
-      border-color: red;
+      border-color: $error-color;
       &::placeholder {
-        color: red;
+        color: $error-color;
       }
     }
   }
@@ -111,7 +111,7 @@
   }
   &-default {
     background: $mainColor;
-    color: #ffffff;
+    color: $color-white;
     @media (any-hover: hover){
       &:hover {
         background: $hover-link-color;
@@ -120,7 +120,7 @@
   }
   &-delete {
     background: $delete-button-color;
-    color: #ffffff;
+    color: $color-white;
     @media (any-hover: hover){
       &:hover {
         background: $hover-link-color;
@@ -132,7 +132,7 @@
 .button-link {
   border-radius: rem(8);
   background: $add-button-color;
-  color: #ffffff;
+  color: $color-white;
   padding: rem(12) rem(18);
   transition: background .3s linear;
   @media (any-hover: hover){
@@ -157,4 +157,9 @@
   @media (min-width: $mobileSmall) {
     @include gridCards(fit, rem(320), 1fr, rem(20));
   }
+}
+
+.loader {
+  display: flex;
+  justify-content: center;
 }
