--- a/app/assets/stylesheets/pages/article-page.sass.scss
+++ b/app/assets/stylesheets/pages/article-page.sass.scss
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    @media (max-width:$mobile) {
+    @media (max-width: $mobile) {
       flex-direction: column;
       align-items: flex-start;
       margin-bottom: rem(20);
@@ -13,7 +13,7 @@
   }
   &__date {
     font-weight: 600;
-    @media (min-width:$mobile) {
+    @media (min-width: $mobile) {
       flex: 0 0 rem(150);
     }
   }
@@ -26,7 +26,7 @@
     > img {
       width: rem(800);
       height: rem(480);
-      @media (max-width:$mobile) {
+      @media (max-width: $mobile) {
         max-width: 100%;
         height: auto;
         object-fit: cover;
@@ -37,18 +37,18 @@
     font-size: rem(20);
     line-height: 120%;
     &:not(:last-child) {
-        margin-bottom: rem(40);
-     }
+      margin-bottom: rem(40);
+    }
   }
 }
-
 
 .comments-form {
   padding: rem(15) 0;
   display: flex;
   flex-direction: column;
   max-width: rem(580);
-  input, textarea {
+  input,
+  textarea {
     width: 100%;
   }
 }
@@ -62,7 +62,7 @@
   &__name {
     font-weight: 600;
     &:not(:last-child) {
-        margin-bottom: rem(10);
-     }
+      margin-bottom: rem(10);
+    }
   }
 }
